syntax = "proto3";

package types;

//合约对象信息
message WASMContractObject {
    string           addr  = 1;
    WASMContractData  data  = 2;
    WASMContractState state = 3;
}

// 存放合约固定数据
message WASMContractData {
    string creator  = 1;
    string name     = 2;
    string alias    = 3;
    string addr     = 4;
    bytes  code     = 5;
    bytes  codeHash = 6;
    bytes  abi      = 7;
}

message LogWASMContractData {
    string creator  = 1;
    string name     = 2;
    string alias    = 3;
    string addr     = 4;
    string codeHash = 5;
    string abiHash  = 6;
}

// 存放合约变化数据
message WASMContractState {
    uint64             nonce       = 1;
    bool               suicided    = 2;
    map<string, bytes> storage     = 3;
}

message WasmContractAction {
    oneof value {
        CreateWasmContract  createWasmContract  = 1;
        CallWasmContract    callWasmContract    = 2;
    }
    int32 ty                                    = 3;
}

// 创建wasm合约
message CreateWasmContract {
    // 消耗限制，默认为Transaction.Fee
    uint64 gasLimit    = 2;
    // gas价格，默认为1
    uint32 gasPrice    = 3;
    // 合约数据
    bytes code      = 4;
    //abi数据
    string abi      = 5;
    // 合约别名，方便识别
    string alias    = 6;
    // 交易备注
    string note     = 7;
}

// 调用wasm合约
message CallWasmContract {
    // 转账金额
    uint64 amount      = 1;
    // 消耗限制，默认为Transaction.Fee
    uint64 gasLimit    = 2;
    // gas价格，默认为1
    uint32 gasPrice    = 3;
    // 合约地址
    string contractAddr= 4;
    //合约id
    //bytes codeHash     = 5;
    // 合约别名，方便识别
    string alias       = 6;
    // 交易备注
    string note        = 7;
    //虚拟机解释器类型
    int32 vmType       = 8;
    //执行动作名称
    string actionName  = 9;
    //执行参数
    bytes actionData   = 10;

}

// 合约创建/调用日志
message ReceiptWASMContract {
    string caller       = 1;
    string contractName = 2;
    string contractAddr = 3;
    uint64 usedGas      = 4;
}

// 用于保存WASM只能合约中的状态数据变更
message WASMStateChangeItem {
    string key          = 1;
    bytes  preValue     = 2;
    bytes  currentValue = 3;
}

// 存放合约固定数据
message WASMContractDataCmd {
    string creator  = 1;
    string name     = 2;
    string alias    = 3;
    string addr     = 4;
    string code     = 5;
    string codeHash = 6;
}

// 存放合约变化数据
message WASMContractStateCmd {
    uint64              nonce       = 1;
    bool                suicided    = 2;
    string              storageHash = 3;
    map<string, string> storage     = 4;
}

// 合约创建/调用日志
message ReceiptWASMContractCmd {
    string caller = 1;
    // 合约创建时才会返回此内容
    string contractName = 2;
    string contractAddr = 3;
    uint64 usedGas      = 4;
    // 创建合约返回的代码
    string ret = 5;
}

message CheckWASMAddrReq {
    string addr = 1;
}
message CheckWASMAddrResp {
    bool   contract     = 1;
    string contractAddr = 2;
    string contractName = 3;
    string aliasName    = 4;
}

message EstimateWASMGasReq {
    string to     = 1;
    bytes  code   = 2;
    string caller = 3;
    uint64 amount = 4;
}
message EstimateWASMGasResp {
    uint64 gas = 1;
}

message WasmDebugReq {
    // 0 query, 1 set, -1 clear
    int32 optype = 1;
}

message WasmDebugResp {
    string debugStatus = 1;
}

message WasmGetAbiResp {
    bytes abi = 1;
}

message WasmQuery {
    string contractAddr = 1;
    string actionName   = 2;
    bytes abidata       = 3;
}

message WasmOutItem {
    string ItemType     = 1;
    bytes Data          = 2;
}

message QueryResultItem {
    string ItemType     = 1;
    string resultJSON   = 2;
}

message WasmQueryResponse {
    repeated QueryResultItem queryResultItems  = 1;
}


